refactor: update repository and service methods for Space and Zone entities